# DiD-Study

./: .gitignore  DEPENDENCY_NOTES.md  LICENSE  METHODS.md  README.md  Untitled.ipynb  Untitled1.ipynb  citations.bib  download_utils.py  file_structure.txt  power_tuner.py  power_tuner_runner.py  pyproject.toml  run_study_ccus.py  setup.cfg  test_run.py
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
_artifacts/: covariates_scaler_prefit.joblib  energy_pca.joblib  energy_pca_scaler.joblib
_artifacts/power_search_20251118_134624/: power_tuner_report.md
_artifacts/power_search_20251118_144209/: power_tuner_report.md
did_study/: __init__.py  estimator.py  study.py
did_study.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
did_study/did_study.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
did_study/estimators/: __init__.py  att.py  att_differences.py  base.py  bins.py  event_study.py
did_study/helpers/: config.py  defaults.py  preparation.py  utils.py
did_study/reporting/: __init__.py  plotting.py  summary.py
did_study/robustness/: __init__.py  att_r_did.py  callaway_tests.py  conditional_did.py  honest_did.py  r_interface.py  wcb.py
did_study/robustness/stats/: __init__.py  mde.py  pretrend.py
scripts/: run_power_tuner.py  run_power_tuner_parallel.py  suggest_threads.py
