[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "did_study"
version = "0.1.0"
description = "Continuous-dose DiD tooling for CCUS / policy studies"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "pandas>=2.1",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "tqdm>=4.65",
  "joblib>=1.3"
]


[tool.setuptools.packages.find]
where = [""]
include = ["did_study*"]
