[metadata]
name = did_study
version = 0.1.0
description = Difference-in-Differences study pipeline (CCUS panel prep, estimators, robustness, reporting)
author = Your Name
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numpy>=1.19
    pandas>=1.0
    scikit-learn>=0.23
    statsmodels>=0.12
    tqdm>=4.50
    matplotlib>=3.7

[options.packages.find]
where = .
